--- a/01_network_analysis.ipynb
+++ b/01_network_analysis.ipynb
@@ -2799,7 +2799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -2896,7 +2896,7 @@
        "11                 Embankment  253862.5800669051"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2910,7 +2910,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate betweenness_centrality\n",
+    "\n",
+    "# create df of starting and ending journeys\n",
+    "OD_temp = pd.DataFrame(london_OD_AMpeak.groupby('station_origin')['flows'].sum()).rename(columns = {'flows': 'O_i'}).merge(\n",
+    "    pd.DataFrame(london_OD_AMpeak.groupby('station_destination')['flows'].sum()).rename(columns = {'flows': 'D_j'}),\n",
+    "    left_index = True,\n",
+    "    right_index = True\n",
+    ")\n",
+    "\n",
+    "# merge with self-loops\n",
+    "OD_temp = OD_temp.merge(\n",
+    "    london_OD_AMpeak[london_OD_AMpeak['station_origin'] == london_OD_AMpeak['station_destination']].rename(columns = {'flows': 'T_ii'}).iloc[:, 1:],\n",
+    "    how = 'left',\n",
+    "    left_index = True,\n",
+    "    right_on = 'station_destination'\n",
+    ").set_index('station_destination').fillna(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -2934,111 +2958,106 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>O_i</th>\n",
-       "      <th>D_j</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>station_origin</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>station_name</th>\n",
+       "      <th>degree</th>\n",
+       "      <th>betweenness</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Abbey Road</th>\n",
-       "      <td>611.5900000000</td>\n",
-       "      <td>355.5520000000</td>\n",
+       "      <th>53</th>\n",
+       "      <td>Oxford Circus</td>\n",
+       "      <td>488863.9759828938</td>\n",
+       "      <td>441455.2739598218</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Acton Central</th>\n",
-       "      <td>1251.9580001104</td>\n",
-       "      <td>779.6100004000</td>\n",
+       "      <th>16</th>\n",
+       "      <td>Bank and Monument</td>\n",
+       "      <td>518758.5920850368</td>\n",
+       "      <td>410426.6020970328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Acton Town</th>\n",
-       "      <td>3847.3360034550</td>\n",
-       "      <td>2310.9960013800</td>\n",
+       "      <th>23</th>\n",
+       "      <td>King's Cross St. Pancras</td>\n",
+       "      <td>467087.2269729907</td>\n",
+       "      <td>405179.8500718087</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aldgate</th>\n",
-       "      <td>2988.7920005380</td>\n",
-       "      <td>7898.5149857100</td>\n",
+       "      <th>20</th>\n",
+       "      <td>Baker Street</td>\n",
+       "      <td>335776.5110308747</td>\n",
+       "      <td>313122.7640392137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Aldgate East</th>\n",
-       "      <td>3282.7199879550</td>\n",
-       "      <td>8051.9299785100</td>\n",
+       "      <th>207</th>\n",
+       "      <td>Green Park</td>\n",
+       "      <td>314300.8459180019</td>\n",
+       "      <td>285241.6638807929</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>129</th>\n",
+       "      <td>Euston</td>\n",
+       "      <td>316434.0567616428</td>\n",
+       "      <td>281577.9137510558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Wood Street</th>\n",
-       "      <td>1379.5370300850</td>\n",
-       "      <td>415.5550020000</td>\n",
+       "      <th>118</th>\n",
+       "      <td>Waterloo</td>\n",
+       "      <td>334358.7151848606</td>\n",
+       "      <td>243308.3442061576</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Woodford</th>\n",
-       "      <td>4967.8030008960</td>\n",
-       "      <td>786.5470002250</td>\n",
+       "      <th>11</th>\n",
+       "      <td>Embankment</td>\n",
+       "      <td>253862.5800669051</td>\n",
+       "      <td>239307.4040081341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Woodgrange Park</th>\n",
-       "      <td>544.1939999400</td>\n",
-       "      <td>255.0669998974</td>\n",
+       "      <th>149</th>\n",
+       "      <td>Charing Cross</td>\n",
+       "      <td>241457.4840334680</td>\n",
+       "      <td>227697.6620448180</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Woodside Park</th>\n",
-       "      <td>3168.8219964810</td>\n",
-       "      <td>810.7360001800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Woolwich Arsenal</th>\n",
-       "      <td>7911.4189999000</td>\n",
-       "      <td>4444.0390000000</td>\n",
+       "      <th>8</th>\n",
+       "      <td>Victoria</td>\n",
+       "      <td>294643.0669449707</td>\n",
+       "      <td>223619.7430521977</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>399 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              O_i              D_j\n",
-       "station_origin                                    \n",
-       "Abbey Road         611.5900000000   355.5520000000\n",
-       "Acton Central     1251.9580001104   779.6100004000\n",
-       "Acton Town        3847.3360034550  2310.9960013800\n",
-       "Aldgate           2988.7920005380  7898.5149857100\n",
-       "Aldgate East      3282.7199879550  8051.9299785100\n",
-       "...                           ...              ...\n",
-       "Wood Street       1379.5370300850   415.5550020000\n",
-       "Woodford          4967.8030008960   786.5470002250\n",
-       "Woodgrange Park    544.1939999400   255.0669998974\n",
-       "Woodside Park     3168.8219964810   810.7360001800\n",
-       "Woolwich Arsenal  7911.4189999000  4444.0390000000\n",
-       "\n",
-       "[399 rows x 2 columns]"
+       "                 station_name             degree        betweenness\n",
+       "53              Oxford Circus  488863.9759828938  441455.2739598218\n",
+       "16          Bank and Monument  518758.5920850368  410426.6020970328\n",
+       "23   King's Cross St. Pancras  467087.2269729907  405179.8500718087\n",
+       "20               Baker Street  335776.5110308747  313122.7640392137\n",
+       "207                Green Park  314300.8459180019  285241.6638807929\n",
+       "129                    Euston  316434.0567616428  281577.9137510558\n",
+       "118                  Waterloo  334358.7151848606  243308.3442061576\n",
+       "11                 Embankment  253862.5800669051  239307.4040081341\n",
+       "149             Charing Cross  241457.4840334680  227697.6620448180\n",
+       "8                    Victoria  294643.0669449707  223619.7430521977"
       ]
      },
-     "execution_count": 232,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# calculate betweenness_centrality\n",
-    "\n",
-    "OD_temp = pd.DataFrame(london_OD_AMpeak.groupby('station_origin')['flows'].sum()).rename(columns = {'flows': 'O_i'}).merge(\n",
-    "    pd.DataFrame(london_OD_AMpeak.groupby('station_destination')['flows'].sum()).rename(columns = {'flows': 'D_j'}),\n",
-    "    left_index = True,\n",
+    "weighted_centrality = weighted_centrality.merge(\n",
+    "    OD_temp,\n",
+    "    how = 'left',\n",
+    "    left_on = 'station_name',\n",
     "    right_index = True\n",
     ")\n",
     "\n",
-    "OD_temp.merge(\n",
+    "weighted_centrality['betweenness'] = weighted_centrality['degree'] - (weighted_centrality['O_i'] + weighted_centrality['D_j'] - weighted_centrality['T_ii'])\n",
     "\n",
-    ")"
+    "weighted_centrality[['station_name', 'degree', 'betweenness']].sort_values('betweenness', ascending = False).head(10)"
    ]
   },
   {
