--- a/documents/urban_simulation_report.bib
+++ b/documents/urban_simulation_report.bib
@@ -1,14 +1,3 @@
-@misc{2017,
-  title = {A.6 -- {{Graph Theory}}: {{Measures}} and {{Indices}} {\textbar} {{The Geography}} of {{Transport Systems}}},
-  shorttitle = {A.6 -- {{Graph Theory}}},
-  year = {2017},
-  month = dec,
-  urldate = {2024-03-27},
-  abstract = {Graph theory relies on several measures and indices that assess the efficiency of transportation networks.},
-  langid = {american},
-  file = {C:\Users\Soki\Zotero\storage\6KVFXJAN\graph-theory-measures-indices.html}
-}
-
 @article{bellingeri2018,
   title = {Robustness of Weighted Networks},
   author = {Bellingeri, Michele and Cassi, Davide},
@@ -59,6 +48,20 @@
   file = {C:\Users\Soki\Zotero\storage\DACEYBYG\Cerqueti et al. - 2019 - Measuring network resilience through connection pa.pdf}
 }
 
+@incollection{ducruet2017,
+  title = {A.6 -- {{Graph Theory}}: {{Measures}} and {{Indices}}},
+  shorttitle = {A.6 -- {{Graph Theory}}},
+  booktitle = {The {{Geography}} of {{Transport Systems}}},
+  author = {Ducruet, Cesar and Rodrigue, Jean-Paul},
+  year = {2017},
+  month = dec,
+  edition = {6},
+  urldate = {2024-03-27},
+  abstract = {Graph theory relies on several measures and indices that assess the efficiency of transportation networks.},
+  langid = {american},
+  file = {C:\Users\Soki\Zotero\storage\6KVFXJAN\graph-theory-measures-indices.html}
+}
+
 @article{flowerdew1982,
   title = {A {{Method}} of {{Fitting}} the {{Gravity Model Based}} on the {{Poisson Distribution}}*},
   author = {Flowerdew, Robin and Aitkin, Murray},
@@ -72,6 +75,15 @@
   urldate = {2024-01-19},
   langid = {english},
   file = {C\:\\Users\\Soki\\Zotero\\storage\\RPJ7VSLW\\Flowerdew and Aitkin - 1982 - A Method of Fitting the Gravity Model Based on the.pdf;C\:\\Users\\Soki\\Zotero\\storage\\WXNR4IHU\\j.1467-9787.1982.tb00744.html}
+}
+
+@article{haynes2020,
+  title = {Gravity and {{Spatial Interaction Models}}},
+  author = {Haynes, Kingsley and Fotheringham, A.},
+  year = {2020},
+  month = apr,
+  journal = {1985},
+  file = {C\:\\Users\\Soki\\Zotero\\storage\\48Q9QM9R\\Haynes and Fotheringham - 2020 - Gravity and Spatial Interaction Models.pdf;C\:\\Users\\Soki\\Zotero\\storage\\Y48V4B23\\16.html}
 }
 
 @article{horl2016,
@@ -138,6 +150,20 @@
   abstract = {We introduce delta centralities, a new class of measures of structural centrality for networks. In particular, we focus on a measure in this class, the information centrality CI, which is based on the concept of efficient propagation of information over the network. CI is defined for both valued and non-valued graphs, and applies to groups as well as individuals. The measure is illustrated and compared with respect to the standard centrality measures by using a classic network data set. The statistical distribution of information centrality is investigated by considering large computer generated graphs and two networks from the real world.},
   langid = {english},
   file = {C:\Users\Soki\Zotero\storage\4CEYIT5V\Latora and Marchiori - 2007 - A measure of centrality based on network efficienc.pdf}
+}
+
+@article{leatherdale2016,
+  title = {Are We Nearly There yet? {{Finding}} out Where 'there' Is},
+  shorttitle = {Are We Nearly There Yet?},
+  author = {Leatherdale, Duncan},
+  year = {2016},
+  month = apr,
+  journal = {BBC News},
+  urldate = {2024-04-16},
+  abstract = {When you see a road sign saying 50 miles to your destination, where exactly is it 50 miles to? It is a simple question to ask, but annoyingly tricky to answer.},
+  chapter = {England},
+  langid = {british},
+  file = {C:\Users\Soki\Zotero\storage\J5UPTXFG\uk-england-35562786.html}
 }
 
 @article{lee2008,
@@ -211,6 +237,20 @@
   file = {C:\Users\Soki\Zotero\storage\NQPMQRA9\Plutov and Segal - 2013 - The delta-betweenness centrality.pdf}
 }
 
+@book{robinson2011,
+  title = {Computer {{Modelling}} for {{Sustainable Urban Design}}: {{Physical Principles}}, {{Methods}} and {{Applications}}},
+  shorttitle = {Computer {{Modelling}} for {{Sustainable Urban Design}}},
+  editor = {Robinson, Darren},
+  year = {2011},
+  month = mar,
+  publisher = {Routledge},
+  address = {London},
+  doi = {10.4324/9781849775403},
+  abstract = {This is the first book to directly address the physics of urban sustainability and how urban sustainability may be modelled and optimised. Starting with an introduction to the importance and key aspects of the topic, it moves on to a detailed consideration of the urban climate and pedestrian comfort. Comprehensive techniques for the modelling and optimisation of urban metabolism are then described, together with means for defining sustainability as the fitness function to be optimised. It ends with an eye to the future of sustainable urban design and the means available to urban designers and governors to help them to secure a more sustainable urban future.  This book will be invaluable both in informing the next generation of urban planners, architects and engineers, and as a tool to current professionals that will directly contribute to the effectiveness of their work by allowing them to more successfully measure and model urban sustainability.},
+  isbn = {978-1-84977-540-3},
+  file = {C:\Users\Soki\Zotero\storage\TWLW32KX\Robinson - 2011 - Computer Modelling for Sustainable Urban Design P.pdf}
+}
+
 @misc{transportforlondon2021,
   title = {Project {{NUMBAT}}},
   author = {{Transport for London}},
@@ -229,6 +269,24 @@
   howpublished = {https://www.tfl.gov.uk/corporate/about-tfl/culture-and-heritage/londons-transport-a-history/london-underground/a-brief-history-of-the-underground},
   langid = {british},
   file = {C:\Users\Soki\Zotero\storage\2RYSSMJA\a-brief-history-of-the-underground.html}
+}
+
+@article{waddell2002,
+  title = {{{UrbanSim}}: {{Modeling Urban Development}} for {{Land Use}}, {{Transportation}}, and {{Environmental Planning}}},
+  shorttitle = {{{UrbanSim}}},
+  author = {Waddell, Paul},
+  year = {2002},
+  month = sep,
+  journal = {Journal of the American Planning Association},
+  volume = {68},
+  number = {3},
+  pages = {297--314},
+  publisher = {Routledge},
+  issn = {0194-4363},
+  doi = {10.1080/01944360208976274},
+  urldate = {2023-12-27},
+  abstract = {Metropolitan areas have come under intense pressure to respond to federal mandates to link planning of land use, transportation, and environmental quality; and from citizen concerns about managing the side effects of growth such as sprawl, congestion, housing affordability, and loss of open space. The planning models used by metropolitan planning organizations were generally not designed to address these issues, creating a gap in the ability of planners to systematically assess them. UrbanSim is a new model system that was developed to respond to these emerging requirements and has now been applied in three metropolitan areas. This article describes the model system and its application to Eugene-Springfield, Oregon.},
+  file = {C:\Users\Soki\Zotero\storage\RES7GNWF\Waddell - 2002 - UrbanSim Modeling Urban Development for Land Use,.pdf}
 }
 
 @article{wyatt2002,
